--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -7,6 +7,17 @@
     "@typescript-eslint/no-unused-expressions": "off",
     "react/no-unescaped-entities": "off",
     "@next/next/no-img-element": "off", // Disable the no-img-element rule
-    "react/display-name": "off"
+    "react/display-name": "off",
+    "@typescript-eslint/no-namespace": "off",
+    "@typescript-eslint/no-empty-interface": "off",
+    "@typescript-eslint/no-empty-function": "off",
+    "@typescript-eslint/no-use-before-define": "off",
+    "@typescript-eslint/no-non-null-assertion": "off",
+    "@typescript-eslint/no-unnecessary-type-assertion": "off",
+    "@typescript-eslint/no-unnecessary-type-constraint": "off",
+    "@typescript-eslint/no-unnecessary-boolean-literal-compare": "off",
+    "@typescript-eslint/no-unnecessary-condition": "off",
+    "@typescript-eslint/no-unnecessary-qualifier": "off",
+    
   }
 }
