--- a/package.json
+++ b/package.json
@@ -17,15 +17,15 @@
     "@types/number-to-words": "^1.2.3",
     "axios": "^1.9.0",
     "date-fns": "^4.1.0",
-    "laravel-echo": "^2.0.2",
+    "laravel-echo": "^2.1.0",
     "next": "15.3.1",
     "number-to-words": "^1.2.4",
     "pusher-js": "^8.4.0",
-    "react": "^19.0.0",
+    "react": "^19.1.0",
     "react-data-table-component": "^7.7.0",
     "react-datepicker": "^8.3.0",
-    "react-dom": "^19.0.0",
-    "react-hook-form": "^7.56.2",
+    "react-dom": "^19.1.0",
+    "react-hook-form": "^7.56.3",
     "react-icons": "^5.5.0",
     "react-player": "^2.16.0",
     "react-signature-canvas": "1.1.0-alpha.2",
@@ -35,17 +35,18 @@
     "zod": "^3.24.4"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
+    "@eslint/eslintrc": "^3.3.1",
     "@heroicons/react": "^2.2.0",
-    "@tailwindcss/postcss": "^4",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
+    "@tailwindcss/postcss": "^4.1.6",
+    "@types/node": "^20.17.46",
+    "@types/react": "^19.1.4",
+    "@types/react-dom": "^19.1.4",
     "autoprefixer": "^10.4.21",
-    "eslint": "^9",
+    "daisyui": "^5.0.35",
+    "eslint": "^9.26.0",
     "eslint-config-next": "15.3.1",
     "mini-css-extract-plugin": "^2.9.2",
-    "tailwindcss": "^4",
-    "typescript": "^5"
+    "tailwindcss": "^4.1.6",
+    "typescript": "^5.8.3"
   }
 }
