--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-spinners": "^0.17.0",
     "recharts": "^2.15.3",
     "sweetalert2": "^11.21.0",
+    "xlsx": "^0.18.5",
     "zod": "^3.24.4"
   },
   "devDependencies": {
