--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "laravel-echo": "^2.1.0",
     "next": "15.3.1",
     "number-to-words": "^1.2.4",
+    "postcss": "^8.5.6",
     "pusher-js": "^8.4.0",
     "react": "^19.1.0",
     "react-data-table-component": "^7.7.0",
